common-applications/test-environment/opengauss-quickissue/website/website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: website-ingress
  namespace: opengauss-quickissue
spec:
  rules:
  - host: quickissue-opengauss.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: website-service
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - quickissue-opengauss.test.osinfra.cn
    secretName: opengauss-quickissue-tls
